--- a/pom.xml
+++ b/pom.xml
@@ -27,18 +27,15 @@
 			<scope>runtime</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger2</artifactId>
-			<version>2.9.2</version>
+		<!-- Swagger -->
+		<dependency>    <groupId>io.swagger.core.v3</groupId>
+			<artifactId>swagger-annotations</artifactId>    <version>2.2.0</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui -->
 		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger-ui</artifactId>
-			<version>2.9.2</version>
-		</dependency>
+		<groupId>org.springdoc</groupId>    <artifactId>springdoc-openapi-ui</artifactId>
+		<version>1.6.7</version>
+	    </dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
