--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -3,4 +3,4 @@ spring.datasource.password=1234
 spring.datasource.url=jdbc:postgresql://localhost:5432/testasr
 
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
