--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -3,4 +3,8 @@ spring.datasource.password=1234
 spring.datasource.url=jdbc:postgresql://localhost:5432/testasr
 
 spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
