--- a/pom.xml
+++ b/pom.xml
@@ -17,19 +17,29 @@
 		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
+
+		<!-- Spring starter-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<!-- PostgreSQL-->
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
-		</dependency>
-
-		<!-- Swagger -->
-		<dependency>    <groupId>io.swagger.core.v3</groupId>
-			<artifactId>swagger-annotations</artifactId>    <version>2.2.0</version>
 		</dependency>
 
 		<dependency>
@@ -37,10 +47,16 @@
 		<version>1.6.7</version>
 	    </dependency>
 
+		<!-- Lombok -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
+		</dependency>
+
+		<!-- Swagger -->
+		<dependency>    <groupId>io.swagger.core.v3</groupId>
+			<artifactId>swagger-annotations</artifactId>    <version>2.2.0</version>
 		</dependency>
 
 		<dependency>
@@ -56,18 +72,15 @@
 			<version>2.9.2</version>
 		</dependency>
 
-
+		<!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>8.0.1.Final</version>
 		</dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-    </dependencies>
+
+	</dependencies>
 
 	<build>
 		<plugins>
