--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,8 @@
 		</dependency>
 
 		<dependency>
-		<groupId>org.springdoc</groupId>    <artifactId>springdoc-openapi-ui</artifactId>
+		<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
 		<version>1.6.7</version>
 	    </dependency>
 
@@ -85,6 +86,12 @@
 			<artifactId>opencsv</artifactId>
 			<version>5.7.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>5.6</version>
+		</dependency>
+
 
 
 
