--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -5,6 +5,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/testasr
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
 
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
