--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,8 @@
 
 		<!-- Swagger -->
 		<dependency>    <groupId>io.swagger.core.v3</groupId>
-			<artifactId>swagger-annotations</artifactId>    <version>2.2.0</version>
+			<artifactId>swagger-annotations</artifactId>
+			<version>2.2.0</version>
 		</dependency>
 
 		<dependency>
@@ -73,14 +74,14 @@
 			<version>2.9.2</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
+		<!-- validator -->
 		<dependency>
 			<groupId>org.hibernate.validator</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<version>8.0.1.Final</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/com.opencsv/opencsv -->
+		<!-- CSV -->
 		<dependency>
 			<groupId>com.opencsv</groupId>
 			<artifactId>opencsv</artifactId>
